Update to recommend codebase

--- a/model/BERTopic/recomend.ipynb
+++ b/model/BERTopic/recomend.ipynb
@@ -308,72 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Working with unseen data**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://www.kaggle.com/code/meetnagadia/topic-modeling-using-bertopic/notebook#Testing-the-model\n",
-    "def use_compute(texts):\n",
-    "    # embeddings = sentence_model.encode(text, show_progress_bar=True)\n",
-    "    topics_new, probs_new = model_loaded.transform(texts,)\n",
-    "    for text in texts:\n",
-    "        print(text,\"\\n\")\n",
-    "    print(\"-----------------------------------------------------------------------------------\")\n",
-    "    print(f\"Suggested Topic ids of the texts: {topics_new}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8cfd8ca91d44b46bc0b800e0f00c49f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The current state of Nigeria is quite dire and we should look forward to proper solution!\n",
-      "What can we as a Niation do? Build from the ground up once again? Should our independence be forfeitted or should chek ourselves and ask what went wrong and look towards the solution;\n",
-      "Manifesto for this plan\n",
-      "- Complete overhaul\n",
-      "- Disolvement of corrupt agencies\n",
-      "- Removel of corrupt Head of states\n",
-      "\n",
-      "#MAKENIAIJAGREATAGAIN \n",
-      "\n",
-      "-----------------------------------------------------------------------------------\n",
-      "Suggested Topic ids of the texts: [4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "text = [\"\"\"The current state of Nigeria is quite dire and we should look forward to proper solution!\n",
-    "What can we as a Niation do? Build from the ground up once again? Should our independence be forfeitted or should chek ourselves and ask what went wrong and look towards the solution;\n",
-    "Manifesto for this plan\n",
-    "- Complete overhaul\n",
-    "- Disolvement of corrupt agencies\n",
-    "- Removel of corrupt Head of states\n",
-    "\n",
-    "#MAKENIAIJAGREATAGAIN\"\"\"]\n",
-    "use_compute(text)"
+    "### **Suggesting links to after Topic classification**"
    ]
   },
   {
